# M5-Forecasting-Competition

./: LICENSE  README.md  pyproject.toml
src/eda-notebooks/: 01_calendar.ipynb  02_sales.ipynb  03_sell_prices.ipynb
src/features/: outliers.py  sell_price_features.py  utils.py
src/models/: 01_model_benchmark.ipynb
